@@ -116,6 +116,7 @@ target_modules = { module= zlib; stage=true; };
 target_modules = { module= boehm-gc; };
 target_modules = { module= qthreads; };
 target_modules = { module= rda; };
+target_modules = { module= libada; };
 
 // These are (some of) the make targets to be done in each subdirectory.
 // Not all; these are the ones which don't have special options.
